<resources>
    <string name="app_name">Go-Strada</string>

    <string name="welcome_to">Welcome To</string>
    <string name="iik_strada">IIK STRADA</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="nim">NIM</string>
    <string name="password">Password</string>
    <string name="menu_open">Menu Open</string>
    <string name="qr_code">QR Code</string>
    <string name="student_activity">Student Activity</string>
    <string name="image_bg_main">Image Dashboard</string>
    <string name="semester">Semester V/T.A 2021/2020</string>
    <string name="ipk">IPK</string>
    <string name="nilai_ipk">3.52</string>
    <string name="ip_sem">IP Sem IV</string>
    <string name="nilai_ip_sem">3.21</string>
    <string name="spp">SPP</string>
    <string name="nilai_spp">-4.500.000-</string>
    <string name="sks">SKS</string>
    <string name="nilai_sks">96</string>
    <string name="sisa_sks">Sisa SKS</string>
    <string name="nilai_sisa_sks">100</string>
    <string name="mk_sem">MK Sem V</string>
    <string name="nilai_mk_sem">5</string>
    <string name="sks_sem">SKS Sem V</string>
    <string name="nilai_sks_sem">20</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="menu_class">Class</string>
    <string name="consult">Consult</string>
    <string name="nama_user">Hendrik Chrisnaedy</string>
    <string name="jurusan_user">S1 Kesehatan Masyarakat</string>
    <string name="nim_user">211120002</string>
    <string name="kalender_akademik">Kalender Akademik</string>
    <string name="jadwal_kuliah">Jadwal Kuliah</string>
    <string name="absensi">Absensi</string>
    <string name="request_surat">Request Surat</string>
    <string name="riwayat_krs">Riwayat KRS</string>
    <string name="lihat_khs">Lihat KHS</string>
    <string name="transkrip_nilai">Transkrip Nilai</string>
    <string name="pembayaran_spp">Pembayaran SPP</string>
    <string name="non_akademik">Non Akademik</string>
    <string name="open_drawer">open drawer</string>
    <string name="icon_bell">icon bell</string>
    <string name="icon_message">icon message</string>
    <string name="kuliah">Kuliah Metodologi Penelitian</string>
    <string name="jam">12:00 sd 13.45 wib</string>
    <string name="dosen">DR. Yuli Prestiowati, M.Kes</string>
    <string name="update_data">Update Data</string>
    <string name="tanggal_lahir">Kediri , 12 Februari 1977</string>
    <string name="alamat">Perum  Betet Town House</string>
    <string name="nomer_telepon">081259055527</string>
    <string name="email">admin@gmail.com</string>
    <string name="domisisili_sementara">Domisili sementara / Kost</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="contact">Contact</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="tag_freind">Tag Friend</string>
    <string name="remind_me">Remind Me</string>
    <string name="nama">Nama</string>
    <string name="angkatan">Angkatan</string>
    <string name="fakultas">Fakultas</string>
    <string name="prodi">Prodi</string>
    <string name="semester_spinner">Semester</string>
    <string name="cari">Cari</string>
    <string name="pilih_semester">Pilih Semester</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="atr07">Atr07</string>
    <string name="next_fragment">Next Fragment</string>
    <string name="close_app">Close App</string>
    <string name="accounts_fragment">Accounts Fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no">No</string>
    <string name="kode_mk">Kode MK</string>
    <string name="mata_kuliah">Mata Kuliah</string>
    <string name="semeseter_ganjil">Ganjil</string>
    <string name="tahun_ajaran">Tahun Ajaran</string>
    <string name="materi">Materi</string>
    <string name="live">Live:</string>
    <string name="jenis_surat">Jenis Surat</string>
    <string name="waktu_presensi">Waktu Presensi</string>
    <string name="waktu_pulang">waktu pulang</string>
</resources>