<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:backgroundTint="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="86dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/biscay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_dosen_pengajar"
                android:layout_width="0dp"
                android:layout_height="66dp"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:src="@drawable/user_icon"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_nama_dosen_pangajar"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/nama"
                    android:fontFamily="@font/roboto"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txt_materi"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/materi"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto"
                    android:layout_weight="2"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginEnd="10dp">

                    <TextView
                        android:id="@+id/text_keterangan_kelas"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:text="@string/live"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto"/>

                    <ImageButton
                        android:id="@+id/ic_button_play_kelas"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/ic_class_room_today_play"
                        android:layout_weight="1"/>

                    <ImageButton
                        android:id="@+id/ic_button_tag_kelas"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/ic_class_room_today_tag"
                        android:layout_weight="1"/>

                </LinearLayout>



            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>